--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="shortcut icon" href="favicon.ico">
 <meta charset="utf-8"/>
-<title>PS49.00 Jailbreak V3.0 BY:BlurayHG</title>
+<title>PS49.00 Jailbreak V1.0 BY:S0lidsea</title>
 <style>
 html, body {
 background-image: url('ps4.jpg');
